use get for all registry requests
